<resources>
    <string name="app_name">T508AC_DEMO_V6.0</string>
    <string name="buzzer_controller_label">Buzzer</string>
    <string name="buzzer_btn_open">Open</string>
    <string name="buzzer_btn_close">Close</string>
    <string name="laserlight_controller_label">Laserlight</string>
    <string name="laserlight_btn_open">Open</string>
    <string name="laserlight_btn_close">Close</string>
    <string name="cashbox_controller_label">Cashbox</string>
    <string name="cashbox_btn_controller">Controller</string>
    <string name="rs232_controller_label">RS232</string>
    <string name="rs232_controller_filetv">file</string>
    <string name="rs232_controller_baudtv">baud</string>
    <string name="rs232_controller_bitstv">bits</string>
    <string name="rs232_controller_eventtv">event</string>
    <string name="rs232_controller_stopbitstv">stopbits</string>
    <string name="rs232_controller_btn_connect">connect</string>
    <string name="rs232_controller_btn_disconnect">disconnect</string>
    <string name="rs232_controller_writetv">writedata</string>
    <string name="rs232_controller_readtv">readdata</string>
    <string name="rs232_controller_btn_send">send</string>
    <string name="rs232_controller_btn_clean">clean</string>
    <string name="idcard_controller_label">IDcard</string>
    <string name="idcard_controller_btn_connect">Connect</string>
    <string name="idcard_controller_btn_stop">Stop</string>
    <string name="idcard_controller_btn_readcard">Readcard Once</string>
    <string name="idcard_controller_btn_readcard_2">Readcard Continue</string>
    <string name="idcard_controller_btn_disconnect">Disconnect</string>
    <string name="idcard_controller_btn_clear">Clear</string>
    <string name="idcard_controller_tv_name">name:</string>
    <string name="idcard_controller_tv_sex">sex:</string>
    <string name="idcard_controller_tv_ethnic">ethnic:</string>
    <string name="idcard_controller_tv_birth">birth:</string>
    <string name="idcard_controller_tv_address">address:</string>
    <string name="idcard_controller_tv_idnumber">idnumber:</string>
    <string name="idcard_controller_tv_authority">authority:</string>
    <string name="idcard_controller_tv_period">period:</string>
    <string name="sdtstatus">status:</string>
    <string name="idcard_count">Count:</string>
    <string name="idcard_count_success">Success:</string>
    <string name="idcard_count_failed">Failed:</string>
    <string name="iccard_controller_label">ICcard</string>
    <string name="iccard_controller_btn_connect">connect</string>
    <string name="iccard_controller_btn_disconnect">disconnect</string>
    <string name="iccard_controller_btn_ic">IC</string>
    <string name="iccard_controller_btn_at24">AT24</string>
    <string name="iccard_controller_btn_sle">SLE</string>
    <string name="iccard_controller_btn_version">Version</string>
    <string name="iccard_controller_ic_btn_reset">reset</string>
    <string name="iccard_controller_ic_btn_icoff">icoff</string>
    <string name="iccard_controller_ic_btn_read">read</string>
    <string name="iccard_controller_at24_btn_reset">reset</string>
    <string name="iccard_controller_at24_btn_write">write</string>
    <string name="iccard_controller_at24_btn_read">read</string>
    <string name="iccard_controller_ic_tv_label">ic</string>
    <string name="iccard_controller_at24_tv_label">at24</string>
    <string name="iccard_controller_sle_tv_label">sle</string>
    <string name="iccard_controller_sle_btn_init">init</string>
    <string name="iccard_controller_sle_btn_write">write</string>
    <string name="iccard_controller_sle_btn_read">read</string>
    <string name="iccard_controller_sle_btn_checkpassword">checkpassword</string>
    <string name="iccard_controller_sle_btn_readspassword">readspassword</string>
    <string name="iccard_controller_sle_btn_rewritepassword">rewritepassword</string>
    <string name="iccard_controller_sle_btn_readspasswordcounter">readspasswordcounter</string>
    <string name="iccard_controller_sle_btn_readflag">readflag</string>
    <string name="iccard_controller_sle_btn_protectiondata">protectiondata</string>
    <string name="iccard_controller_sle_tv">~</string>
    <string name="pinpad_controller_label">Pinpad</string>
    <string name="pinpad_controller_btn_connect">connect</string>
    <string name="pinpad_controller_btn_disconnect">disconnect</string>
    <string name="pinpad_controller_btn_send">send</string>
    <string name="pinpad_controller_btn_recv">enter password</string>
    <string name="pinpad_controller_btn_clear">clear</string>
    <string name="pinpad_controller_tv_version">version</string>
    <string name="pinpad_controller_init">Initialization</string>
    <string name="pinpad_controllerN20">N20</string>
    <string name="pinpad_controllerSP10">SP10</string>
    <string name="pinpad_controller_inits">Restore factory settings successfully</string>
    <string name="psam_controller_label">PSAM</string>
    <string name="psam_controller_ttyS0">ttyS0</string>
    <string name="psam_controller_ttyS1">ttyS1(Default)</string>
    <string name="psam_controller_ttyS2">ttyS2</string>
    <string name="psam_controller_ttyS3">ttyS3</string>
    <string name="psam_controller_btn_connect">connect</string>
    <string name="psam_controller_btn_disconnect">disconnect</string>
    <string name="psam_controller_btn_reset">reset</string>
    <string name="psam_controller_btn_random">random</string>
    <string name="psam_controller_btn_send">send</string>
    <string name="psam_controller_btn_read">read</string>
    <string name="psam_controller_tv_psam1">psam1</string>
    <string name="psam_controller_tv_psam2">psam2</string>
    <string name="psam_controller_tv_hz">Frequency</string>
    <string name="psam_controller_btn_hz">SetFrequency</string>
    <string name="fingerprintre_string_reset_success">Reset success!</string>
    <string name="psam_controller_et_send">00,84,00,00,04</string>
    <string name="nfc_controller_label">NFC</string>
    <string name="nfc_controller_tv_cardtype">cardtype:</string>
    <string name="nfc_controller_tv_readdata">readdata:</string>
    <string name="nfc_controller_tv_cardid">cardid:</string>
    <string name="nfc_controller_tv_s50s70">s50/s70</string>
    <string name="nfc_controller_btn_write">write</string>
    <string name="nfc_controller_btn_read">read</string>
    <string name="nfc_device_not_support">Device Not Support NFC</string>
    <string name="nfc_not_open_go_open">NFC is closed,go open it</string>
    <string name="nfc_not_open">NFC Not Open</string>
    <string name="nfc_card_type">Card Type:</string>
    <string name="nfc_card_number">Card Id:</string>
    <string name="nfc_card_info">Card Info:</string>
    <string name="nfc_operate_fan">Section Oprating:</string>
    <string name="yes">Yes</string>
    <string name="nfc_section_key">Section Key:</string>
    <string name="nfc_read_section_data">Read Setcion Data</string>
    <string name="nfc_data_readed">Card Info:</string>
    <string name="nfc_data_writting">Data being Written:</string>
    <string name="nfc_write_section_data">Write Section Data</string>
    <string name="nfc_max_command_len">MaxCommandLength:</string>
    <string name="nfc_manu">Manufacturer:</string>
    <string name="nfc_prof">ProtocolInfo:</string>
    <string name="nfc_block_count">BlockCount:</string>
    <string name="nfc_szt_money">Money:</string>
    <string name="printer_controller_label">printer</string>
    <string name="printer_controller_btn_connect">Connect</string>
    <string name="printer_controller_btn_disconnect">Disconnect</string>
    <string name="printer_controller_btn_clear">Clear</string>
    <string name="printer_controller_btn_print">Print</string>
    <string name="printer_controller_btn_printest">printest</string>
    <string name="printer_controller_btn_printreset">reset</string>
    <string name="printer_controller_btn_takethepaper">TakeThePaper</string>
    <string name="printer_controller_btn_gray">Gray</string>
    <string name="printer_controller_btn_fontnormalmode">FontNormalmode</string>
    <string name="printer_controller_btn_fontitalics">FontItalics</string>
    <string name="printer_controller_btn_fontbold">FontBold</string>
    <string name="printer_controller_btn_fontdoublewidth">FontDoublewidth</string>
    <string name="printer_controller_btn_fonttimes">FontTimes</string>
    <string name="printer_controller_btn_fontunderline">FontUnderline</string>
    <string name="printer_controller_btn_setright">SetRight</string>
    <string name="printer_controller_btn_setleft">SetLeft</string>
    <string name="printer_controller_btn_setcenter">SetCenter</string>
    <string name="printer_controller_btn_ticket">Ticket</string>
    <string name="printer_controller_btn_imagae">Imagae</string>
    <string name="printer_controller_btn_code">Code</string>
    <string name="printer_controller_btn_stringtocode">Stringtocode</string>
    <string name="printer_controller_btn_cut">Cut</string>
    <string name="printer_controller_stringtocode">Please type the characters</string>
    <string name="magneticcard_controller_label">Magneticcard</string>
    <string name="magneticcard_controller_btn_connect">connect</string>
    <string name="magneticcard_controller_btn_disconnect">disconnect</string>
    <string name="magneticcard_controller_rd_disencryptionmode">disencryption</string>
    <string name="magneticcard_controller_rd_encryptionmode">encryption</string>
    <string name="magneticcard_controller_btn_clear">clear</string>
    <string name="fingerprintrecognition_controller_label">Fingerprintrecognition</string>
    <string name="fingerprintrecognition_controller_btn_connect">connect</string>
    <string name="fingerprintrecognition_controller_btn_disconnect">disconnect</string>
    <string name="fingerprintrecognition_controller_btn_fingerreset">reset</string>
    <string name="fingerprintrecognition_controller_btn_fingerprintrecord">fingerprintrecord</string>
    <string name="fingerprintrecognition_controller_btn_fingerprintquery">fingerprintquery</string>
    <string name="fingerprintrecognition_controller_tv_result">result:</string>
    <string name="fingerprintrecognition_controller_tv_information">information</string>
    <string name="fingerprintrecognition_controller_btn_delete">delete</string>
    <string name="fingerprintrecognition_controller_btn_clear">clear</string>
    <string name="fingerprintre_string_finger">Keep your finger on the fingerprint collection area.......</string>
    <string name="fingerprintre_string_wait">Gathering Please wait .....!</string>
    <string name="fingerprintre_string_recognition_success">Fingerprint recognition success!</string>
    <string name="fingerprintre_string_fingerprint_failed">Fingerprint failed!</string>
    <string name="fingerprintre_string_reset_failed">Reset failed!</string>
    <string name="fingerprintre_string_input_success">Fingerprint input success!</string>
    <string name="fingerprintre_string_input_failed">Fingerprint input failed!</string>
    <string name="fingerprintre_string_empty_success">Empty fingerprint success!</string>
    <string name="fingerprintre_string_empty_failed">Empty fingerprint failed!</string>
    <string name="fingerprintre_string_deleted_successfully">Fingerprint deleted successfully!</string>
    <string name="fingerprintre_string_deletion_failed">Fingerprint deletion failed!</string>
    <string name="fingerprintre_string_existed">Fingerprint existed!</string>
    <string name="device_power_up">Power-on</string>
    <string name="device_connect">Connect</string>
    <string name="display_string">Display Strings</string>
    <string name="clear_string">Clear Screen</string>
    <string name="get_pin_content">Get Plain Password</string>
    <string name="get_encrypt_pin_content">Get Encryption Password</string>
    <string name="power_off">Disconnect</string>
</resources>