<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/iccard_controller_btn_connect"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/iccard_controller_btn_disconnect"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ic"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/iccard_controller_btn_ic"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_at24"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/iccard_controller_btn_at24"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_sle"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/iccard_controller_btn_sle"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_version"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/iccard_controller_btn_version"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

</LinearLayout>