<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_power_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_power_up"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_get_serial_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_connect"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_display_string"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/display_string"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_string"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_get_pin_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_pin_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_pin_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_get_encrypt_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_encrypt_pin_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_encrypt_pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_power_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/power_off" />

</LinearLayout>