<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/rs232_controller_btn_connect"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/rs232_controller_btn_disconnect"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/rs232_controller_filetv"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/rs232_controller_baudtv"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/rs232_controller_bitstv"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/rs232_controller_eventtv"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/rs232_controller_stopbitstv"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/sp_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/sp_baud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/sp_bits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/sp_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/sp_stopbits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_send"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/rs232_controller_btn_send"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_clean"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/rs232_controller_btn_clean"
            android:textSize="25sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/rs232_controller_writetv"
        android:inputType="textMultiLine"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rs232_controller_readtv"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scrollHorizontally="true"
        android:textSize="25sp" />

</LinearLayout>